feature/view-profiles-2 button to view profile
new answer object working
description is reserved property had to change
segue set up for VPVC

--- a/BloQuery/BloQuery/Base.lproj/Main.storyboard
+++ b/BloQuery/BloQuery/Base.lproj/Main.storyboard
@@ -225,7 +225,7 @@
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="detailDisclosureButton" indentationWidth="10" reuseIdentifier="cell" rowHeight="100" id="94N-Z8-exM" customClass="QuestionsTableViewCell">
                                 <rect key="frame" x="0.0" y="92" width="600" height="100"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="center" tableViewCell="94N-Z8-exM" id="MdR-ZN-QYi">
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="94N-Z8-exM" id="MdR-ZN-QYi">
                                     <rect key="frame" x="0.0" y="0.0" width="533" height="99.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
@@ -240,7 +240,7 @@
                                             <state key="normal" title="Button" image="profile"/>
                                             <connections>
                                                 <action selector="didTapProfilePhoto:" destination="sru-MH-sNP" eventType="touchUpInside" id="6db-Xr-6AR"/>
-                                                <segue destination="LTf-Ll-HfO" kind="show" identifier="voewProfile" id="887-ea-GKw"/>
+                                                <segue destination="LTf-Ll-HfO" kind="show" identifier="viewProfile" id="887-ea-GKw"/>
                                             </connections>
                                         </button>
                                         <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="szK-ud-CTx">
@@ -342,10 +342,10 @@
             </objects>
             <point key="canvasLocation" x="3064" y="396"/>
         </scene>
-        <!--User Profile View Controller-->
+        <!--Iew Profile View Controller-->
         <scene sceneID="P4w-SC-Tns">
             <objects>
-                <viewController storyboardIdentifier="ViewProfileViewController" id="LTf-Ll-HfO" customClass="UserProfileViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ViewProfileViewController" id="LTf-Ll-HfO" customClass="VIewProfileViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="3o1-KL-37f"/>
                         <viewControllerLayoutGuide type="bottom" id="loE-rV-1d2"/>
