--- a/BloQuery/BloQuery/Base.lproj/Main.storyboard
+++ b/BloQuery/BloQuery/Base.lproj/Main.storyboard
@@ -313,11 +313,21 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LWZ-zh-Ofa">
-                                            <rect key="frame" x="18" y="61" width="46" height="30"/>
-                                            <state key="normal" title="Button"/>
+                                            <rect key="frame" x="16" y="61" width="60" height="30"/>
+                                            <state key="normal" title="Upvote"/>
                                             <connections>
                                                 <action selector="upvoteAnswer:" destination="paj-ta-3IH" eventType="touchUpInside" id="6Xd-qX-61S"/>
                                             </connections>
+                                        </button>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Count:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pSN-jf-e68">
+                                            <rect key="frame" x="84" y="65" width="51" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P04-WR-j8r">
+                                            <rect key="frame" x="443" y="60" width="85" height="30"/>
+                                            <state key="normal" title="Cell Number"/>
                                         </button>
                                     </subviews>
                                     <constraints>
@@ -329,6 +339,7 @@
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="answerTextView" destination="EAi-od-fdT" id="ZO7-sI-pd4"/>
+                                    <outlet property="voteCount" destination="pSN-jf-e68" id="Ns8-Td-s1Q"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
